# Onnxruntime-TensorRT

./: .bandit  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LESSONS_LEARNED.md  Makefile  README.md  pyproject.toml  requirements.txt
benchmark/: benchmark_trt.py
config/: trt_config.yaml
examples/: llm_inference.py  sam2_segmentation.py  yolov10_inference.py
src/onnxruntime_tensorrt/: __init__.py
src/onnxruntime_tensorrt/core/: __init__.py  session.py
src/onnxruntime_tensorrt/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_logger.py  test_session.py  test_version.py
