[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onnxruntime-tensorrt"
version = "1.0.0"
description = "Ultra-fast AI inference with ONNX Runtime and TensorRT optimization"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = [
    "onnx",
    "tensorrt",
    "deep-learning",
    "inference",
    "optimization",
    "yolo",
    "llm",
    "sam",
    "computer-vision",
    "ai",
    "machine-learning",
]
authors = [
    { name = "Ümit Kacar", email = "umitkacar@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "onnxruntime-gpu>=1.17.0",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
# Deep learning frameworks
torch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

# Transformers and LLM support
transformers = [
    "transformers>=4.36.0",
]

# YOLO models
yolo = [
    "ultralytics>=8.1.0",
]

# Visualization
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

# Model optimization
optimization = [
    "onnx>=1.15.0",
    "onnxsim>=0.4.33",
    "protobuf>=4.24.0,<5.0.0",
]

# All features
all = [
    "onnxruntime-tensorrt[torch,transformers,yolo,viz,optimization]",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.11.0",
    "coverage[toml]>=7.3.0",
    "ruff>=0.1.15",
    "black>=23.12.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.12.0",
    "ipdb>=0.13.13",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/umitkacar/Onnxruntime-TensorRT"
Documentation = "https://github.com/umitkacar/Onnxruntime-TensorRT#readme"
Repository = "https://github.com/umitkacar/Onnxruntime-TensorRT"
Issues = "https://github.com/umitkacar/Onnxruntime-TensorRT/issues"

[project.scripts]
ort-trt-benchmark = "onnxruntime_tensorrt.benchmark.cli:main"

# ==================== Hatch Configuration ====================

[tool.hatch.version]
path = "src/onnxruntime_tensorrt/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/benchmark",
    "/config",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/onnxruntime_tensorrt"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.15",
    "black>=23.12.0",
    "mypy>=1.8.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/onnxruntime_tensorrt --cov-report=html --cov-report=term {args:tests}"
cov-report = "coverage report"
cov-html = "coverage html && python -m http.server 8000 -d htmlcov"
lint = "ruff check {args:src tests examples benchmark}"
format = "black {args:src tests examples benchmark}"
format-check = "black --check {args:src tests examples benchmark}"
type-check = "mypy {args:src}"
check-all = [
    "format-check",
    "lint",
    "type-check",
    "test-cov",
]

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

# ==================== Ruff Configuration ====================

[tool.ruff]
target-version = "py38"
line-length = 100
indent-width = 4

src = ["src", "tests", "examples", "benchmark"]

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) by default
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # NumPy-specific rules
    "PERF",   # Perflint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",    # Line too long (handled by black)
    "S101",    # Use of assert detected (pytest uses assert)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "COM812",  # Missing trailing comma (conflicts with black)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
    "B017",    # pytest.raises(Exception) is fine for tests
    "PT011",   # pytest.raises too broad is fine for tests
    "SLF001",  # Private member access (testing internals)
    "TRY003",  # Long exception messages are fine
    "BLE001",  # Catching Exception is fine for benchmarks
    "NPY002",  # Legacy numpy random is fine
    "ERA001",  # Commented code is fine in examples
    "PTH123",  # Path.open() not necessary everywhere
    "PERF203", # try-except in loop is acceptable
]

# Allow autofix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ARG001",  # Allow unused arguments (fixtures)
    "PLR2004", # Allow magic values in tests
]
"examples/**/*.py" = [
    "T201",    # Allow print in examples
    "INP001",  # Allow implicit namespace packages
]

[tool.ruff.lint.isort]
known-first-party = ["onnxruntime_tensorrt"]
force-sort-within-sections = true

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

# ==================== Black Configuration ====================

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Default exclude patterns
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ==================== MyPy Configuration ====================

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = false
pretty = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "onnxruntime.*",
    "transformers.*",
    "ultralytics.*",
    "torch.*",
    "torchvision.*",
]
ignore_missing_imports = true

# ==================== Pytest Configuration ====================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "tensorrt: marks tests that require TensorRT",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ==================== Coverage Configuration ====================

[tool.coverage.run]
branch = true
source = ["src/onnxruntime_tensorrt"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "class .*\\bProtocol\\):",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ==================== isort Configuration (backup) ====================

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["onnxruntime_tensorrt"]
skip_gitignore = true
